okay-arrow stage 0: the verdict — level through arrays, 5-30x behind in own columns (a String per row); stage 1 redesigned as views over the message's bytes
Co-Authored-By: Claude Opus 5.5 <noreply@anthropic.com>
Claude-Session: https://claude.ai/code/session_01LZNspDq7ZU8TRfNoTnpRMD